# dlscratch

./: CMakeLists.txt
include/: autograd.hpp  data.hpp  functional.hpp  losses.hpp  nn.hpp  optim.hpp  tensor.hpp
src/: tensor.cpp
tests/: test_autograd.cpp  test_nn_linear.cpp  test_tensor.cpp
